# gcmg

./: Dockerfile  README.md  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker-compose-build-and-push.yml  python-package-release-on-pypi-and-github.yml  test.yml
gcmg/: cli.py  llm.py  suggestion.py  utility.py
gitsumdiff/: cli.py  llm.py
test/bats/: test_bedrock.bats  test_cli.bats  test_google.bats  test_groq.bats  test_llamacpp.bats  test_openai.bats
test/pytest/: test___init__.py  test_cli.py  test_llm.py  test_suggestion.py  test_utility.py
